--- a/fri/src/pages/Community/AddCom.scss
+++ b/fri/src/pages/Community/AddCom.scss
@@ -159,3 +159,120 @@
     }
   }
 }
+
+.spinner {
+  width: 40vw;
+  // height: 50px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  background: #ffc000;
+  color: #000;
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 2px #7c7c7c;
+  display: block;
+  padding: 16px 16px 12px 16px;
+  transform: scale(0.8);
+  margin-left: calc(25vw - 12px);
+}
+
+.spinner-wrapper {
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100%;
+  left: calc(50% - 1rem);
+}
+
+.spinner-wrapper::after {
+  content: "";
+  background: #ffefbe;
+  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 0.25rem;
+  left: 0.25rem;
+}
+
+.spinner-wrapper.dupli::after {
+  content: "";
+  background: #ffce3c;
+  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 0.25rem;
+  left: 0.25rem;
+}
+
+.rotator {
+  position: relative;
+  width: 2rem;
+  border-radius: 2rem;
+  overflow: hidden;
+  animation: rotate 2000ms infinite linear;
+}
+
+.rotator:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  border-radius: 100%;
+}
+
+.inner-spin {
+  background: #000000;
+  height: 2rem;
+  width: 1rem;
+}
+
+.inner-spin {
+  animation: rotate-left 2500ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  border-radius: 1rem 0 0 1rem;
+  transform-origin: 1rem 1rem;
+}
+
+.inner-spin:last-child {
+  animation: rotate-right 2500ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  margin-top: -2rem;
+  border-radius: 0 1rem 1rem 0;
+  float: right;
+  transform-origin: 0 50%;
+}
+
+@keyframes rotate-left {
+
+  60%,
+  75%,
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate-right {
+
+  0%,
+  25%,
+  45% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
